salesforce_sfdx/main/default/objects/MemberPlan/MemberPlan.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>