salesforce_sfdx/main/default/objects/MemberPlan/fields/Benefit_Program__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Program__c</fullName>
    <label>Benefit Program</label>
    <length>255</length>
    <type>Text</type>
</CustomField>