salesforce_sfdx/main/default/objects/MemberPlan/fields/Benefits_Package__c.field-meta.xml
<CustomField>
    <fullName>Benefits_Package__c</fullName>
    <label>Benefits Package</label>
    <length>255</length>
    <type>Text</type>
</CustomField>