salesforce_sfdx/main/default/objects/MemberPlan/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>