salesforce_sfdx/main/default/objects/MemberPlan/fields/Change_Id__c.field-meta.xml
<CustomField>
    <fullName>Change_Id__c</fullName>
    <label>Change Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>