salesforce_sfdx/main/default/objects/MemberPlan/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>