salesforce_sfdx/main/default/objects/MemberPlan/fields/Cobra_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Cobra_Effective_Date__c</fullName>
    <label>Cobra Effective Date</label>
    <type>Date</type>
</CustomField>