salesforce_sfdx/main/default/objects/MemberPlan/fields/Cobra_Eligible_Date__c.field-meta.xml
<CustomField>
    <fullName>Cobra_Eligible_Date__c</fullName>
    <label>Cobra Eligible Date</label>
    <type>Date</type>
</CustomField>