salesforce_sfdx/main/default/objects/MemberPlan/fields/Cobra_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Cobra_Termination_Date__c</fullName>
    <label>Cobra Termination Date</label>
    <type>Date</type>
</CustomField>