salesforce_sfdx/main/default/objects/MemberPlan/fields/Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Type__c</fullName>
    <label>Contract Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>