salesforce_sfdx/main/default/objects/MemberPlan/fields/Corporation__c.field-meta.xml
<CustomField>
    <fullName>Corporation__c</fullName>
    <label>Corporation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>