salesforce_sfdx/main/default/objects/MemberPlan/fields/Coverage_Poilicy_URL__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Poilicy_URL__c</fullName>
    <label>Coverage Poilicy URL</label>
    <type>Url</type>
</CustomField>