salesforce_sfdx/main/default/objects/MemberPlan/fields/Coverage_Policy_Manual__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Policy_Manual__c</fullName>
    <formula>IF(ISPICKVAL(Product_Line__c,"ABCBS"),HYPERLINK("https://secure.arkansasbluecross.com/members/coverage_policy_disclaimer.aspx","ABCBS","_self"),IF(ISPICKVAL(Product_Line__c,"HA"),HYPERLINK("https://secure.arkansasbluecross.com/members/coverage_policy_disclaimer.aspx","HA","_self"),IF(ISPICKVAL(Product_Line__c,"BAA"),HYPERLINK("https://secure.blueadvantagearkansas.com/providers/MPreCertRouter.aspx","BAA","_self"), IF(ISPICKVAL(Product_Line__c,"Walmart"),HYPERLINK("https://walmart.abcbs.net/coverage/coverage_policy.asp","Walmart","_self"),IF(ISPICKVAL(Product_Line__c,"BANA"),HYPERLINK("https://secure.blueadvantagearkansas.com/providers/BAAMedicalpolicy.aspx?prefix=TYG","BANA","_self"),"")))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coverage Policy Manual</label>
    <type>Text</type>
</CustomField>