salesforce_sfdx/main/default/objects/MemberPlan/fields/Effective_Reason__c.field-meta.xml
<CustomField>
    <fullName>Effective_Reason__c</fullName>
    <label>Effective Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>