salesforce_sfdx/main/default/objects/MemberPlan/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Member Plans (Group)</relationshipLabel>
    <relationshipName>Member_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>