salesforce_sfdx/main/default/objects/MemberPlan/fields/Line_Of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_Of_Business__c</fullName>
    <label>Line Of Business</label>
    <length>255</length>
    <type>Text</type>
</CustomField>