salesforce_sfdx/main/default/objects/MemberPlan/fields/Med_Dental_HIPAA_Time_Credit__c.field-meta.xml
<CustomField>
    <fullName>Med_Dental_HIPAA_Time_Credit__c</fullName>
    <label>Med/Dental/HIPAA Time Credit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>