salesforce_sfdx/main/default/objects/MemberPlan/fields/Parent_Plan__c.field-meta.xml
<CustomField>
    <fullName>Parent_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will show the parent member plan for rider records</description>
    <label>Parent Plan</label>
    <referenceTo>MemberPlan</referenceTo>
    <relationshipLabel>Parent Plans</relationshipLabel>
    <relationshipName>Member_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>