salesforce_sfdx/main/default/objects/MemberPlan/fields/Policy_Holder_Plan__c.field-meta.xml
<CustomField>
    <fullName>Policy_Holder_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Policy holder's member plan.</description>
    <label>Policy Holder Plan</label>
    <referenceTo>MemberPlan</referenceTo>
    <relationshipLabel>Dependent Member Plans</relationshipLabel>
    <relationshipName>Member_Plans1</relationshipName>
    <type>Lookup</type>
</CustomField>