salesforce_sfdx/main/default/objects/MemberPlan/fields/Policy_Plan__c.field-meta.xml
<CustomField>
    <fullName>Policy_Plan__c</fullName>
    <label>Policy Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>