salesforce_sfdx/main/default/objects/MemberPlan/fields/Pre_Existing_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Pre_Existing_End_Date__c</fullName>
    <label>Pre-Existing End Date</label>
    <type>Date</type>
</CustomField>