salesforce_sfdx/main/default/objects/MemberPlan/fields/PreExisting_Effective_Term_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>PreExisting_Effective_Term_Start_Date__c</fullName>
    <label>PreExisting Effective-Term Start Date</label>
    <type>Date</type>
</CustomField>