salesforce_sfdx/main/default/objects/MemberPlan/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic Individual, Basic Blue</fullName>
            </value>
            <value>
                <fullName>Blue Card Host</fullName>
            </value>
            <value>
                <fullName>BLUE DENTAL</fullName>
            </value>
            <value>
                <fullName>Comp Major Medical</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>Direct Pay</fullName>
            </value>
            <value>
                <fullName>Drug</fullName>
            </value>
            <value>
                <fullName>ENHANCED PLAN B</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>First Source Access</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>HA Federal HMO</fullName>
            </value>
            <value>
                <fullName>HA Federal POS</fullName>
            </value>
            <value>
                <fullName>HA HMO</fullName>
            </value>
            <value>
                <fullName>HA Medipak HMO</fullName>
            </value>
            <value>
                <fullName>HA State HMO</fullName>
            </value>
            <value>
                <fullName>HA State POS</fullName>
            </value>
            <value>
                <fullName>Health Savings Acct</fullName>
            </value>
            <value>
                <fullName>Health Savings Embed</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>MA AREA 1</fullName>
            </value>
            <value>
                <fullName>MA AREA 2</fullName>
            </value>
            <value>
                <fullName>MAPD</fullName>
            </value>
            <value>
                <fullName>MAPD (PPO) ESSENTIAL</fullName>
            </value>
            <value>
                <fullName>MAPD AREA 1 OPT1</fullName>
            </value>
            <value>
                <fullName>MAPD AREA 1 OPT 2</fullName>
            </value>
            <value>
                <fullName>MAPD AREA 2 OPT 1</fullName>
            </value>
            <value>
                <fullName>MAPD AREA 3</fullName>
            </value>
            <value>
                <fullName>MAPD HMO</fullName>
            </value>
            <value>
                <fullName>MAPD PLATINUM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>