salesforce_sfdx/main/default/objects/MemberPlan/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>To capture the product type of member plan</description>
    <label>Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>