salesforce_sfdx/main/default/objects/MemberPlan/fields/Provider_Network_Region__c.field-meta.xml
<CustomField>
    <fullName>Provider_Network_Region__c</fullName>
    <label>Provider Network Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>