salesforce_sfdx/main/default/objects/MemberPlan/fields/Purchaser_Name__c.field-meta.xml
<CustomField>
    <fullName>Purchaser_Name__c</fullName>
    <label>Purchaser Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>