salesforce_sfdx/main/default/objects/MemberPlan/fields/Rider_Type__c.field-meta.xml
<CustomField>
    <fullName>Rider_Type__c</fullName>
    <label>Rider Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>