salesforce_sfdx/main/default/objects/MemberPlan/fields/Risk_Pop__c.field-meta.xml
<CustomField>
    <fullName>Risk_Pop__c</fullName>
    <label>Risk Pop</label>
    <length>255</length>
    <type>Text</type>
</CustomField>