salesforce_sfdx/main/default/objects/MemberPlan/fields/Term_Date__c.field-meta.xml
<CustomField>
    <fullName>Term_Date__c</fullName>
    <label>Term Date</label>
    <type>Date</type>
</CustomField>