salesforce_sfdx/main/default/objects/MemberPlan/fields/Total_Rate__c.field-meta.xml
<CustomField>
    <fullName>Total_Rate__c</fullName>
    <label>Total Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>