salesforce_sfdx/main/default/objects/MemberPlan/fields/Wait_Period__c.field-meta.xml
<CustomField>
    <fullName>Wait_Period__c</fullName>
    <label>Wait Period</label>
    <type>Date</type>
</CustomField>