salesforce_sfdx/main/default/objects/MemberPlan/recordTypes/Plan.recordType-meta.xml
<RecordType>
    <fullName>Plan</fullName>
    <active>true</active>
    <description>Member Plan</description>
    <label>Plan</label>
</RecordType>