salesforce_sfdx/main/default/objects/MemberPlan/recordTypes/Riders_Surcharges.recordType-meta.xml
<RecordType>
    <fullName>Riders_Surcharges</fullName>
    <active>true</active>
    <label>Riders &amp; Surcharges</label>
</RecordType>